src/objects/supplier__c.object
<CustomObject>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>supplier_number__c</fullName>
        <label>supplier_number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>supplier</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>suppliers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>